# Morpheus

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitmodules  .lfsconfig  .pre-commit-config.yaml  .pylintrc  .vale.ini  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  dependencies.yaml  doca.sh  doca_test.jsonlines  manifest.yaml  morpheus.code-workspace  morpheus_error.txt  out.txt  output.csv  output.json  pyproject.toml  ransom_dask_repo.py  setup.cfg  setup.py  test.sh  val_hammah-role-g-pytorch-results.json  val_hammah-role-g-pytorch.csv  versioneer.py
docs/: CMakeLists.txt  Makefile  README.md  conda_docs.yml  make.bat  requirement.txt  requirements.txt
docs/source/: advanced_usage.rst  api.rst  basic_usage.rst  cloud_deployment_guide.md  conda_packages.md  conf.py  control_message_guide.md  cpu_only_mode.md  dask_integration.rst  devcontainer.md  examples.md  getting_started.md  glossary.md  index.rst  intro.rst  kafka.rst  lib.rst  models_and_datasets.md  morpheus_developer_documentation.md  morpheus_quickstart_guide.md  py_api.rst  stages.rst  triton.rst
docs/source/_static/: omni-style.css  py_properties.css
docs/source/_templates/: custom-class-template.rst  custom-module-template.rst
docs/source/basics/: building_a_pipeline.md  building_a_pipeline.rst  cpu_only_mode.md  examples.rst  overview.rst
docs/source/developer_guide/: architecture.md  contributing.md  examples.md  guides.md  guides.rst
docs/source/examples/: index.rst
docs/source/extra_info/: glossary.md  known_issues.md  performance.md  troubleshooting.md
docs/source/loaders/: index.md  index.rst  morpheus_loaders.md
docs/source/modules/: index.md  index.rst  morpheus_modules.md
docs/source/sphinxext/: github_link.py
docs/source/stages/: morpheus_stages.md
examples/developer_guide/3_simple_cpp_stage/: .gitattributes  CMakeLists.txt  MANIFEST.in  README.md  compile.sh  pass_thru.py  run.py  (+3 more)
examples/external_cpp_stage/: .gitattributes  CMakeLists.txt  MANIFEST.in  compile.sh  pyproject.toml  setup.cfg
morpheus/: CMakeLists.txt  __init__.py  _version.py  cli.py  config.py  data
morpheus/_lib/: CMakeLists.txt  README.md  __init__.py  cudf_helpers.pyx
morpheus/cli/: __init__.py  click_completion_tools.py  commands.py  default_command_hooks.py  hookspecs.py  plugin_manager.py  register_stage.py  run.py  stage_registry.py  utils.py
morpheus/common/: __init__.py
morpheus/controllers/: elasticsearch_controller.py  file_to_df_controller.py  filter_detections_controller.py  milvus_langchain_controller.py  milvus_llamaindex_controller.py  milvus_vector_db_controller.py  mlflow_model_writer_controller.py  monitor_controller.py  qdrant_vector_db_controller.py  rss_controller.py  serialize_controller.py  vector_db_controller.py  write_to_file_controller.py
morpheus/data/: abp_pcap_dump.jsonlines  bert-base-uncased-hash.txt  columns_ae_azure.txt  columns_ae_duo.txt  columns_fil.txt  labels_ae.txt  labels_binary_root_cause.txt  labels_nlp.txt
morpheus/io/: __init__.py  data_manager.py  data_manager_loader.py  data_record.py  data_storage_interface.py  deserializers.py  serializers.py  tao_client.py  utils.py
morpheus/llm/: __init__.py  llm_engine_stage.py
morpheus/loaders/: __init__.py  file_list_loader.py  file_to_df_loader.py  fsspec_loader.py  sql_loader.py
morpheus/messages/: __init__.py  control_message.py  data_class_prop.py  message_base.py  message_control.py  message_meta.py  multi_ae_message.py  multi_inference_ae_message.py  multi_inference_message.py  multi_message.py  multi_response_message.py  multi_tensor_message.py  tensor_memory.py
morpheus/modules/: __init__.py  abstract_module.py  databricks_deltalake_writer.py  databricks_writer_module.py  dfp_mlflow_model_writer_module.py  dfp_training_and_mlflow_writer_module.py  dfp_training_module.py  file_batcher.py  file_batcher_module.py  file_to_df.py  file_to_df_module.py  filter_cm_failed.py  filter_control_message.py  filter_detections.py  from_control_message.py  mlflow_model_writer.py  mlflow_model_writer_module.py  module.py  module_factory.py  multiplexer.py  nested_module.py  payload_batcher.py  serialize.py  to_control_message.py  write_to_elasticsearch.py  write_to_file.py
morpheus/parsers/: __init__.py  event_parser.py  ip.py  splunk_notable_parser.py  url_parser.py  windows_event_parser.py  zeek.py
morpheus/pipeline/: __init__.py  base_stage.py  boundary_stage_mixin.py  configurable_output_source.py  control_message_stage.py  file_types.py  general_stages.py  linear_pipeline.py  messages.py  multi_message_stage.py  pass_thru_type_mixin.py  pipeline.py  preallocator_mixin.py  preprocessing.py  receiver.py  sender.py  single_output_mixin.py  single_output_source.py  single_port_stage.py  source_stage.py  stage.py  stage_base.py  stage_decorator.py  stage_schema.py  stream_pair.py  stream_wrapper.py
morpheus/service/: milvus_client.py  milvus_vector_db_service.py  vector_db_serivce.py  vector_db_service.py
morpheus/stages/: __init__.py  general_stages.py
morpheus/utils/: __init__.py  ae_feature_selector.py  async_map.py  atomic_integer.py  click_completion_tools.py  column_info.py  compare_df.py  concat_df.py  control_message_utils.py  cudf_subword_helper.py  databricks_utils.py  debounce.py  decorator_utils.py  decorators.py  directory_watcher.py  downloader.py  env_config_value.py  execution_chain.py  file_utils.py  http_utils.py  json_schema_builder.py  loader_ids.py  loader_utils.py  logger.py  logging.py  logging_timer.py  model_cache.py  module_ids.py  module_utils.py  monitor_utils.py  onnx_to_trt.py  producer_consumer_queue.py  requests_wrapper.py  rest_server.py  schema_transforms.py  seed.py  sql_utils.py  type_aliases.py  type_utils.py  vector_db_service_utils.py  (+5 more)
python/: CMakeLists.txt
python/morpheus/: CMakeLists.txt  MANIFEST.in  setup.cfg  setup.py
python/morpheus_dfp/: CMakeLists.txt  MANIFEST.in  setup.cfg  setup.py  todo.md
python/morpheus_llm/: CMakeLists.txt  MANIFEST.in  setup.cfg  setup.py
(+3362 files in other folders)
