[build-system]
requires = [
   "nvidia-pyindex",
   "setuptools",
   "versioneer-518",
   "wheel",
]
build-backend = "setuptools.build_meta"

# List any markers that users would reasonable want to filter by.
# These show up when querying `pytest --markers`
[tool.pytest.ini_options]
markers = [
   "benchmark: Benchmarks",
   "slow: Slow tests",
   "kafka: Tests that require a running instance of kafka",
   "use_cpp: Test support C++ nodes and objects",
   "use_python: Test only supports Python nodes and objects",
   "replace_callback: Replaces the results_callback in cli",
   "reload_modules: Reloads a set of python modules after running the current test"
]

filterwarnings = [
   # Warning coming from mlflow's usage of numpy
   'ignore:`np.object` is a deprecated alias for the builtin `object`. To silence this warning, use `object` by itself. Doing this will not modify any behavior and is safe',
   'ignore:Warning the df property returns a copy, please use the copy_dataframe method or the mutable_dataframe context manager to modify the DataFrame in-place instead.',
]

addopts = "--benchmark-disable"

[tool.yapfignore]
ignore_patterns = [
  "**/*.pyx",
  "**/*.pxd"
]
