[build-system]
requires = [
   "nvidia-pyindex",
   "setuptools",
   "versioneer-518",
   "wheel",
]
build-backend = "setuptools.build_meta"

# List any markers that users would reasonable want to filter by.
# These show up when querying `pytest --markers`
[tool.pytest.ini_options]
markers = [
   "benchmark: Benchmarks",
   "slow: Slow tests",
   "kafka: Tests that require a running instance of kafka",
   "use_cpp: Test support C++ nodes and objects",
   "use_python: Test only supports Python nodes and objects",
   "replace_callback: Replaces the results_callback in cli",
   "reload_modules: Reloads a set of python modules after running the current test"
]

filterwarnings = [
   # Warning coming from mlflow's usage of numpy
   'ignore:`np.object` is a deprecated alias for the builtin `object`. To silence this warning, use `object` by itself. Doing this will not modify any behavior and is safe',
]

addopts = "--benchmark-disable"

[tool.yapfignore]
ignore_patterns = [
  "**/*.pyx",
  "**/*.pxd"
]

[tool.interrogate]
verbose = 2
ignore-private = true
ignore-property-decorators = true
ignore-semiprivate = true
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-module = true
ignore-nested-functions = true
ignore-regex = [
   "supports_cpp_node$",
   "^unpack_tuple$",
   "^unpack_union$",

   # work-around for https://github.com/econchick/interrogate/issues/105
   "^error_handler$",
   "^term_signal$",
]
exclude = ["morpheus/cli"]
omit-covered-files = true
